--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         .login-form h2 {
             font-size: 18px;
             font-weight: 400;
-            color: #3d5245;
+            color: #ffffff;
         }
 
         .login-form input,
